# hunger-food

./: .gitignore  .pre-commit-config.yaml
.github/workflows/: nodejs.yml  python-fastapi.yml
auth-service/: README.md  package-lock.json  package.json  tsconfig.json  vercel.json
auth-service/controllers/: authController.ts
auth-service/src/: app.ts
auth-service/src/controllers/: authController.ts
auth-service/src/middleware/: rateLimiterMiddleware.ts  requestIDMiddleware.ts  userInputValidationMiddleware.ts
auth-service/src/models/: userModel.ts
auth-service/src/routes/: authRoutes.ts  healthRoutes.ts
auth-service/src/types/: index.ts
auth-service/src/utils/: db.ts  logger.ts  otpUtils.ts  sendOTPEmail.ts
order-booking-service/: .pre-commit-config.yaml  pyproject.toml  requirements.txt
order-booking-service/app/: crud.py  database.py  main.py  models.py  schemas.py
order-booking-service/app/routers/: orders.py
order-booking-service/app/utils/: auth.py  logger.py
order-booking-service/tests/: conftest.py  test_crud.py  test_main.py  test_orders_api.py
