[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hungerfood-order-booking-service"
version = "0.0.1"
description = "A FastAPI-based order booking service"
authors = [
    { name = "Prince Patel", email = "princepatel30082003@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.9"

[project.urls]
homepage = "https://example.com"
repository = "https://github.com/Princen08/hunger-food"

[project.optional-dependencies]
dev = [
    "ruff",  # Linter
    "black",  # Code formatter
    "isort",  # Import sorter
    "pytest",  # Testing framework
    "pytest-asyncio",  # Async support for pytest
    "pytest-cov",  # Test coverage
    "pre-commit"
]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "C90"]  # Enable specific rule categories
ignore = ["E501"]  # Ignore specific rules (e.g., line length)
exclude = [
    "__pycache__/",
    "migrations/",
    "venv/",
    ".venv/",
    "node_modules/",
]